# tensorrt_examples

./: .gitignore  README.md
samples/: Makefile.config
samples/common/: BatchStream.h  EntropyCalibrator.h
samples/plugin_test/: CMakeLists.txt  README.md  auto.sh  load_plugin_lib.py  main.cpp  test_adding_plugin_by_api.cpp  test_adding_plugin_by_api.py  test_adding_plugin_by_parser.cpp  test_adding_plugin_by_parser.py
samples/plugin_test/models/: create_model.py
samples/plugin_test/plugin/: average_kernel.cu  average_kernel.hpp  average_plugin.cpp  average_plugin.h
samples/sampleDynamicReshapeRewrite/: Makefile  create_model.py  sampleDynamicReshapeRewrite.cpp
samples/sampleINT8API/: sampleINT8API.cpp
samples/sampleImplicitInt8PTQ/: Makefile  sample_implicit_int8_ptq.cpp
samples/sampleImplicitInt8PTQ_2/: CMakeLists.txt  Makefile  auto.sh  clear.sh  implicit_int8_ptq.cpp
samples/sampleImplicitInt8PTQ_2/common/: BatchStream.h  EntropyCalibrator.h
samples/sampleOnnxMNIST_Rewrite/: Makefile  sampleOnnxMNIST.cpp
samples/sampleOnnxResnet50_Rewrite/: Makefile  sampleOnnxResnet50.cpp
